--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   overflow-x: hidden;
 }
 
-/* STAR BACKGROUND */
+/* STARFIELD */
 .stars {
   position: fixed;
   inset: 0;
@@ -61,7 +61,7 @@ body {
 }
 
 p {
-  font-size: 2rem;
+  font-size: 2.1rem;
   margin-bottom: 1.5rem;
 }
 
